Fix text overflow in calendar.

--- a/src/components/CalendarReminder.css
+++ b/src/components/CalendarReminder.css
@@ -40,5 +40,6 @@
 }
 
 .CalendarReminder__Text {
+    word-wrap: break-word;
     margin: 0.2em 0;
 }
